--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest"
   },
   "jest": {
-    "collectCoverageFrom": ["src/**/*.{js,jsx}"],
+    "collectCoverageFrom": ["handler.js", "src/**/*.{js,jsx}"],
     "coverageThreshold": {
       "global": {
         "branches": 95,
