--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -7,6 +7,7 @@ Resources:
     Properties:
       Handler: 'handler.handler'
       Runtime: nodejs6.10
+      CodeUri: ./
       Description: ''
       MemorySize: 512
       Timeout: 3
