--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
   build:
     commands:
       - echo running tests
-      - npm test
+      - jest --coverage
       - echo running lint
       - eslint *.js
   post_build:
