--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -11,7 +11,7 @@ Resources:
           # NOTE: Before using this template, replace the <<region>> and <<account>> fields
           #       in Lambda integration URI in the swagger file to region and accountId 
           #       you are deploying to
-          LambdaFunctionName: !Ref LambdaFunction
+          LambdaFunctionName: !Ref countdown
   countdown:
     Type: 'AWS::Serverless::Function'
     Properties:
