--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,10 @@
         "no-console": [
             0
         ],
+        "brace-style":[
+            "error",
+            "1tbs"
+        ],
         "indent": [
             "error",
             2
