no duplicated blank lines

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,12 @@
         "no-console": [
             0
         ],
+        "no-multiple-empty-lines":[
+            "error",
+            {
+                "max":1
+            }
+        ],
         "brace-style":[
             "error",
             "1tbs"
