--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     }
   },
   "devDependencies": {
-    "jest": "^21.2.1",
-    "eslint": "^4.11.0",
-    "aws-sdk": "2.149.0"
+    "aws-sdk": "2.149",
+    "eslint": "^4.19.1",
+    "jest": "^21.2"
   }
 }
