--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     }
   },
   "devDependencies": {
-    "aws-sdk": "2.149",
-    "eslint": "^4.19.1",
-    "jest": "^21.2"
+    "aws-sdk": "^2.239.1",
+    "eslint": "^4",
+    "jest": "^21"
   }
 }
